Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Dr Alessandro Usseglio Viretta by alessandrousseglioviretta</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Dr Alessandro Usseglio Viretta : Short bio" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Dr Alessandro Usseglio Viretta</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Dr Alessandro Usseglio Viretta</h1>
-        <p>Short bio</p>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/alessandrousseglioviretta">View on GitHub</a>
 
-        <p class="view"><a href="https://github.com/alessandrousseglioviretta">View My GitHub Profile</a></p>
+          <h1 id="project_title">Dr Alessandro Usseglio Viretta</h1>
+          <h2 id="project_tagline">Short bio</h2>
 
-      </header>
-      <section>
-        <p>Dr. Alessandro Usseglio Viretta is a physicist with a doctoral (PhD) degree in Neuroinformatics, earned at the ETH Zurich, a top-ranked research institution. Alessandro is an expert in data analysis and mining, machine-learning, mathematical modeling and numerical simulation as well as a knowledgeable software developer with past professional experience in the field of software and consulting for financial risk management. He has experience in product concept, design, hiring, development management and coaching. He always keeps an eye on the newest technologies to boost the competitiveness and attractiveness of the products he designs. Previously, Alessandro developed Zeel.ch, a SaaS that allows companies to link their CRM systems to the social utility profiles of their customers and to easily analyze and leverage on their social connectivity. Zeel.ch was acquired by CustVox AG in 2012.</p>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p>Alessandro is a physicist with a doctoral (PhD) degree in Neuroinformatics, earned at the ETH Zurich, a top-ranked research institution. Alessandro is an expert in data analysis and mining, machine-learning, mathematical modeling and numerical simulation as well as a knowledgeable software developer with past professional experience in the field of software and consulting for financial risk management. He has experience in product concept, design, hiring, development management and coaching. He always keeps an eye on the newest technologies to boost the competitiveness and attractiveness of the products he designs. Previously, Alessandro developed Zeel.ch, a SaaS that allows companies to link their CRM systems to the social utility profiles of their customers and to easily analyze and leverage on their social connectivity. Zeel.ch was acquired by CustVox AG in 2012.</p>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -40,6 +48,7 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
